fixed signup and login forms since they were hard to read

--- a/views/auth/auth.style.css
+++ b/views/auth/auth.style.css
@@ -1,20 +1,14 @@
-/*body {
+body {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	box-sizing: border-box;
-	height: 100vh;
-	color: #e9e9e9;
-	background-color: #363740;
+	gap: 6rem;
 }
-*/
+
 
 #authContainer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	transform: translateY(50%);
 }
 
 h1 {
@@ -40,7 +34,7 @@ form {
 .inputField,
 #submitButton {
 	background: none;
-	border: 0.5px solid #9b9b9b;
+	border: 1px solid black;
 	border-radius: 8px;
 	padding: 1rem;
 	font-size: 1rem;
@@ -51,25 +45,12 @@ form {
 #submitButton {
 	font-family: Cantarell;
 	cursor: pointer;
-	border: 0.5px solid #9b9b9b;
+	border: 1px solid black;
 }
 
-#submitButton:focus {
-	border-color: #000;
-	outline: 0;
-}
-
-.inputField::placeholder {
-	color: #909090;
-}
-
-.inputField:hover {
-	border: 0.5px solid #000000;
-}
 
 .inputField:focus {
-	border: 0.5px solid #000;
-	outline: 0;
+	outline: 2px solid #70bcff;
 }
 
 .row {
@@ -90,7 +71,7 @@ form {
 	appearance: none;
 	-webkit-appearance: none;
 	padding: .5em;
-	border: 1px solid #000000;
+	border: 2px solid #9b9b9b;
 	border-radius: 4px;
 	transition: 200ms;
 	cursor: pointer;
@@ -99,38 +80,39 @@ form {
 #tos:hover,
 #tos:hover+label {
 	border-color: #000;
-	color: #9b9b9b;
+	color: #000;
 	outline: none;
 	cursor: pointer;
 }
 
 label[for='tos'] {
-	color: #000000;
+	color: #9b9b9b;
 	transition: 200ms;
 }
 
 #tos:focus-visible,
 #tos:focus-visible+label {
 	border-color: #000;
-	color: #9b9b9b;
+	color: #000;
 	outline: none;
 }
 
 #tos:checked {
-	background-color: #9b9b9b;
-	border-color: #9b9b9b;
+	background-color: #000;
+	border-color: #000;
 }
 
 #tos:checked+label {
-	color: #9b9b9b;
+	color: #000;
 }
 
 #submitButton:not(:disabled):hover {
-	background-color: #f0f0f0;
+	background-color: #d7d7d7;
 }
 
 #submitButton:disabled {
-	color: #000000;
+	color: #7b7b7b;
+	border-color: #7b7b7b;
 	cursor: not-allowed;
 }
 
@@ -139,5 +121,5 @@ label[for='tos'] {
 }
 
 .fieldError {
-	border: 0.5px solid #e38585 !important;
+	border: 1px solid #e38585 !important;
 }
